HEAD
	+ Added setMessage() and popMessageAndClass() methods to TreeView
	+ Enable InnoDB engine when there are only 4 previous databases
3.2.10
	+ Added zentyal-sogo icon
	+ EBox::WebServer::removeNginxInclude does not longer throws
	  a exception if the path to remove is not included
	+ Updated nginx to server static files directly always so apache shouldn't
	  ever get this kind of requests
	+ Support for redirection when loading URL in existent dialog
	+ Fix dashboard UI freeze when widgets were being updated
	+ More tolerant referer validation so we can access to submodels
	  with an URL
	+ Fixed revert of changes in redisvi
	+ Better input validation in EBox::Conf::Redis::import_dir_from_file
3.2.9
	+ Give support to data in use exception for in-place booleans
	+ Fix warnOnChangeId framework
	+ Write logs configuration only when the module is enabled
	+ Use replace instead of href to redirect in Controller::DataTable
	  (This avoids infinite loops if the user press back button)
3.2.8
	+ Automatic report text formatting adapted to Redmine
	+ Fix tab selection in tabbed composite from URL path anchor,
	  for instance, /Maintenance/Events#ConfigureDispatchers
	+ Avoid errors triggered on web administration port validation
	+ ManageAdmins model now also add/removes lpadmin group
3.2.7
	+ Remove lock file in EBox::Util::Lock::unlock()
	+ Decode to utf8 the MySQL database results
	+ Create log database using utf8 charset
	+ Better way to set MySQL password for all the root accounts
	+ Use sharedscripts in zentyal-core logrotate to avoid triggering
	  in every log file
	+ Take into account view customizer on audit logging
	+ Show complex types (more than one field) in audit log
	  while editing by storing the dump of the value
	+ Fix EBox::Types::Composite::cmp to store changes when only last type
	  is modified
3.2.6
	+ Show confirmation dialog before upgrading to 3.3
	+ Fixed general widget packages to avoid error on 'packages to
	  upgrade' section
3.2.5